fixes #965 (vessel panel layout issue)"

--- a/app/styles/components/info-panel.scss
+++ b/app/styles/components/info-panel.scss
@@ -26,7 +26,7 @@
   .details, .metadata {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 
   > .metadata {
